# donaldswap

./: Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: build.yml
examples/: dummy.rs
src/: config.rs  input.rs  main.rs  obs.rs  state.rs  swapper.rs  windows.rs
src/server/: api.rs  mod.rs  ws.rs
static/: index.html  obs.html
static/css/: style.css
static/js/: app.js
